# sscanf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  args.h  array.cpp  array.h  data.cpp  data.h  enum.cpp  enum.h  kustom.cpp  makefile  pawn.json  specifiers.cpp  specifiers.h  sscanf.cpp  sscanf.def  sscanf.h  sscanf.sln  sscanf.vcxproj  sscanf.vcxproj.filters  sscanf2.inc  sscanf3.inc.in  utils.cpp  utils.h
src/: CMakeLists.txt  delimiters.cpp  delimiters.hpp  environment.cpp  environment.hpp  environment_skip.hpp  errors.cpp  errors.hpp  memory.cpp  memory.hpp  options.cpp  parser.cpp  parser.hpp  specifiers.cpp  specifiers.hpp  sscanf.cpp  utils.cpp  utils.hpp  version.hpp.in
src/specifiers/: delim_specifier.hpp  group_specifiers.cpp  group_specifiers.hpp  other_specifiers.cpp  other_specifiers.hpp  simple_specifiers.cpp  simple_specifiers.hpp  specnum_specifiers.hpp  string_specifier.cpp  string_specifier.hpp  trivial_specifiers.hpp
tests/: sscanfM.pwn
